--- a/views/page-not-found.html
+++ b/views/page-not-found.html
@@ -65,7 +65,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Page Not Found!</h1>
+    <h1>Page Not Found :(</h1>
 </body>
 
 </html>
