--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,20 +1,32 @@
 <%- include('../includes/head.ejs') -%>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
-</head>
+    </head>
 
-<body>
-    <%- include('../includes/navigation.ejs') -%>
+    <body>
+        <%- include('../includes/navigation.ejs') -%>
 
-    <main>
-        <form class="product-form" action="/admin/add-product" method="POST">
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title">
-            </div>
+            <main>
+                <form class="product-form" action="/admin/add-product" method="POST">
+                    <div class="form-control">
+                        <label for="title">Title</label>
+                        <input type="text" name="title" id="title">
+                    </div>
+                    <div class="form-control">
+                        <label for="imageUrl">Image</label>
+                        <input type="text" name="imageUrl" id="imageUrl" width="200 px" height="300 px">
+                    </div>
+                    <div class="form-control">
+                        <label for="price">Price</label>
+                        <input type="number" name="price" id="price" step="0.01">
+                    </div>
+                    <div class="form-control">
+                        <label for="description">Description</label>
+                        <textarea name="description" id="description" rows="3"></textarea>
+                    </div>
 
-            <button class="btn" type="submit">Add Product</button>
-        </form>
-    </main>
+                    <button class="btn" type="submit">Add Product</button>
+                </form>
+            </main>
 
-<%- include('../includes/end.ejs') -%>
+            <%- include('../includes/end.ejs') -%>
