--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,15 +27,16 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
+                                    <a href="/product/<%= product.id %>" class="btn">Details</a>
                                     <form action="/add-to-cart" method="POST">
                                         <button class="btn">Add to Cart</button>
                                     </form>
                                 </div>
                             </article>
-                            <% } %>
-                    </div>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
                         <% } %>
+                    </div>
+                <% } else { %>
+                    <h1>No Products Found!</h1>
+                    <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
