Sequelize: Adding cart & cart-items using sequelize methods

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,15 +19,15 @@ form {
   display: inline;
 }
 
-.centered{
+.centered {
   text-align: center;
 }
 
-.image{
+.image {
   height: 20rem;
 }
 
-.image img{
+.image img {
   height: 100%;
 }
 
@@ -202,6 +202,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
